Move dfu core to separate crate inside this project

--- a/dfu-flasher/Cargo.toml
+++ b/dfu-flasher/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["mikael <mike7b4@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
+dfu = { path = "../dfu"}
 log = ""
 structopt = "0.3"
 nix = ""
