revert back to gitlab libusb

--- a/dfu/Cargo.toml
+++ b/dfu/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 [dependencies]
 log = ""
 nix = ""
-#usbapi = {"git" = "https://gitlab.com/mike7b4/usbapi-rs"}
-usbapi = {"path" = "../../usbapi-rs"}
+usbapi = {"git" = "https://gitlab.com/mike7b4/usbapi-rs"}
+#usbapi = {"path" = "../../usbapi-rs"}
 
 [dependencies.serde]
 version = "1"
