--- a/dfu-flasher/Cargo.toml
+++ b/dfu-flasher/Cargo.toml
@@ -1,16 +1,18 @@
 [package]
 name = "dfu-flasher"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["mikael <mike7b4@protonmail.com>"]
 edition = "2018"
+license = "MIT"
+description = "Dfu-flasher redone in pure Rust"
+homepage = "https://gitlab.com/mike7b4/dfuflash"
+repository = "https://gitlab.com/mike7b4/dfuflash.git"
 
 [dependencies]
 dfu = { path = "../dfu"}
-log = ""
+log = "0.4"
 structopt = "0.3"
 serde_json = "1"
-nix = ""
-env_logger = ""
-#usbapi = {"git" = "https://gitlab.com/mike7b4/usbapi-rs"}
-
-usbapi = {"path" = "../../usbapi-rs"}
+nix = "0.18"
+env_logger = "0.7"
+usbapi = {"git" = "https://gitlab.com/mike7b4/usbapi-rs"}
