--- a/dfu/Cargo.toml
+++ b/dfu/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "dfu"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Mikael <mike7b4@protonmail.com>"]
 edition = "2018"
 license = "MIT"
 description = "The core DFU library used by DFU flasher."
 repository = "https://gitlab.com/mike7b4/dfuflash"
 homepage = "https://gitlab.com/mike7b4/dfuflash.git"
+readme = "readme.md"
 
 [dependencies]
 log = "0.4"
