--- a/dfu-flasher/Cargo.toml
+++ b/dfu-flasher/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "dfu-flasher"
-version = "0.4.3"
+name = "dfu-flasher-nusb"
+version = "0.4.4"
 authors = ["mikael <mike7b4@protonmail.com>"]
 edition = "2018"
 license = "MIT"
@@ -14,6 +14,5 @@ dfu = { path = "../dfu", version = "0.4"}
 log = "0.4"
 structopt = "0.3"
 serde_json = "1"
-nix = "0.20"
-env_logger = "0.7"
-usbapi = {version = "0.4", features = ["serde"]}
+env_logger = "0.11"
+nusb = "0.1.9"
