--- a/dfu/Cargo.toml
+++ b/dfu/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "dfu-nusb"
 version = "0.4.4"
-authors = ["Mikael <mike7b4@protonmail.com>"]
-edition = "2018"
+authors = ["fantasyzhjk <fantasyzhjk@outlook.com>"]
+edition = "2021"
 license = "MIT"
 description = "The core DFU library used by DFU flasher."
-repository = "https://gitlab.com/mike7b4/dfuflash"
-homepage = "https://gitlab.com/mike7b4/dfuflash.git"
+homepage = "https://github.com/fantasyzhjk/dfuflash-nusb"
+repository = "https://github.com/fantasyzhjk/dfuflash-nusb.git"
 readme = "readme.md"
 
 [dependencies]
