--- a/dfu-nusb/Cargo.toml
+++ b/dfu-nusb/Cargo.toml
@@ -13,6 +13,7 @@ readme = "readme.md"
 log = "0.4"
 nusb = "0.1.9"
 futures-lite = "2.3.0"
+tokio = { version = "1", features = ["time"] }
 
 [dependencies.serde]
 version = "1"
